--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ multidict==6.0.4
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.12.1
+Pillow==10.1.0
 platformdirs==4.1.0
 sqlparse==0.4.4
 typing_extensions==4.9.0
