--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp==3.9.1
 aiosignal==1.3.1
 asgiref==3.7.2
+async-timeout==4.0.3
 attrs==23.1.0
 black==23.12.0
 click==8.1.7
@@ -17,6 +18,8 @@ pathspec==0.12.1
 phonenumbers==8.13.26
 Pillow==10.1.0
 platformdirs==4.1.0
+python-dotenv==1.0.0
 sqlparse==0.4.4
-typing_extensions==4.9.0
+tomli==2.0.1
+typing-extensions==4.9.0
 yarl==1.9.4
